@@ -1,7 +1,7 @@
 package boomerang.like.service;
 
 import boomerang.board.domain.Board;
-import boomerang.board.repository.BoardRepository;
+import boomerang.board.service.BoardService;
 import boomerang.global.exception.BusinessException;
 import boomerang.global.oauth.dto.PrincipalDetails;
 import boomerang.global.response.ErrorCode;
@@ -9,39 +9,39 @@ import boomerang.like.domain.Like;
 import boomerang.like.dto.LikeResponseDto;
 import boomerang.like.repository.LikeRepository;
 import boomerang.member.domain.Member;
-import boomerang.member.repository.MemberRepository;
-import jakarta.transaction.Transactional;
+import boomerang.member.service.MemberService;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
 public class LikeService {
 
     private final LikeRepository likeRepository;
-    private final MemberRepository memberRepository;
-    private final BoardRepository boardRepository;
+    private final MemberService memberService;
+    private final BoardService boardService;
 
-    @Transactional
+
+    @Transactional(readOnly = true)
     public List<LikeResponseDto> getLikesByBoardId(PrincipalDetails principalDetails, Long boardId) {
-        Board board = getBoardOrThrow(boardId);
+        Board board = boardService.getBoard(boardId);
 
         List<Like> likes = likeRepository.findAllByBoardIdAndIsDeletedFalse(board.getId());
 
         boolean isUserLoggedIn = principalDetails != null;
-        Member loginMember = isUserLoggedIn ? getMemberOrThrow(principalDetails.getMemberEmail()) : null;
+        Member loginMember = isUserLoggedIn ? memberService.getMemberByEmail(principalDetails.getMemberEmail()) : null;
 
         return likes.stream()
             .map(like -> createLikeResponseDto(like, isUserLoggedIn, loginMember))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
     public LikeResponseDto createLike(PrincipalDetails principalDetails, Long boardId) {
-        Member loginMember = getMemberOrThrow(principalDetails.getMemberEmail());
-        Board board = getBoardOrThrow(boardId);
+        Member loginMember = memberService.getMemberByEmail(principalDetails.getMemberEmail());
+        Board board = boardService.getBoard(boardId);
 
         // 이미 좋아요를 눌렀는지 확인
         if (likeRepository.existsByMemberAndBoardAndIsDeletedFalse(loginMember, board)) {
@@ -56,24 +56,13 @@ public class LikeService {
 
     @Transactional
     public void deleteLike(PrincipalDetails principalDetails, Long boardId) {
-        Member loginMember = getMemberOrThrow(principalDetails.getMemberEmail());
-        Board board = getBoardOrThrow(boardId);
+        Member loginMember = memberService.getMemberByEmail(principalDetails.getMemberEmail());
+        Board board = boardService.getBoard(boardId);
 
         Like like = likeRepository.findByMemberAndBoardAndIsDeletedFalse(loginMember, board)
             .orElseThrow(() -> new BusinessException(ErrorCode.LIKE_NOT_FOUND));
 
         like.delete();
-        likeRepository.save(like);
-    }
-
-    private Member getMemberOrThrow(String email) {
-        return memberRepository.findByEmail(email)
-            .orElseThrow(() -> new BusinessException(ErrorCode.MEMBER_NON_EXISTENT));
-    }
-
-    private Board getBoardOrThrow(Long boardId) {
-        return boardRepository.findById(boardId)
-            .orElseThrow(() -> new BusinessException(ErrorCode.BOARD_NOT_FOUND_ERROR));
     }
 
     private LikeResponseDto createLikeResponseDto(Like like, boolean isUserLoggedIn, Member loginMember) {
